--- a/demo/ImageGallery.html
+++ b/demo/ImageGallery.html
@@ -6,18 +6,18 @@
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
 </head>
-<!-- CSS File--->
+<!-- CSS File---> 
 <link rel="stylesheet" href="imagegallery.css">
 <!--Script File-->
 <script src="imagegallery.js"></script>
 
 <header>
-<div style="background-color: black;"><h1>&nbsp;</h1></div>
+<div style="background-color: rgb(5, 123, 202);height:50px"><h1 style="text-align:center;padding-top:5px">Image Gallery Sample</h1></div><!--&nbsp;-->
 </header>
 <body>
-<div id="test"></div>
+<div id="test" style="height:150px !important;"></div>
 </body>
 <footer>
-<div style="background-color: black;"><h1>&nbsp;</h1></div>
+<!--<div style="background-color: rgb(5, 123, 202);;"><h1>&nbsp;</h1></div>-->
 </footer>
 </html>
